# nyaya-mitra

./: .gitignore  CLAUDE.md  Dockerfile  README.md  openenv.yaml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
demo/: __init__.py  blog_post.md  transcript_renderer.py  video_script.md
demo/transcripts/: int_001_scripted.md  leg_003_scripted.md  wel_005_scripted.md
docs/: architecture.md  deploy.md  kb_coverage.md  reward_design.md  submission_4_30pm_plan.md  submission_5pm_plan.md  submission_checklist.md  training_runbook.md  what_this_is_not.md
eval/: __init__.py  eval_harness.py  metrics.py  plot.py  report_scripted.md  report_t4_resumed.md
eval/baselines/: __init__.py  action_parser.py  llm_protocol.py  prompted_baseline.py  scripted_baseline.py  vanilla_baseline.py
scripts/: deploy_space.sh  generate_eval_cases.py  merge_metrics.py  render_demo_plots.py  run_eval_post_train.sh  run_phase1.sh  run_phase2.sh  run_smoke.sh  run_timeboxed.sh  wire_rewards.py
tests/integration/: test_interface_contract.py  test_openenv_conformance.py
tests/track_a/: test_applicability_each_framework.py  test_applicability_new_frameworks.py  test_determinism.py  test_dlsa_directory.py  test_eligibility_each_scheme.py  test_eligibility_new_schemes.py  test_env_info_passthrough.py  test_env_loop.py  test_eval_cases.py  test_extractor_goldens.py  test_seed_profile_coverage.py  test_smart_citizen_sim.py
tests/track_b/: conftest.py  test_aggregator.py  test_gates.py  (+12 more)
training/: __init__.py  _real_policy.py  rollout.py  train_grpo.py  train_grpo_colab.ipynb
(+108 files in other folders)
