[project]
name = "nyaya-mitra"
version = "0.1.0"
description = "paralegal-cum-welfare-advisor RL environment for vulnerable Indian citizens"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "jsonschema>=4.21",
]

[project.optional-dependencies]
track_a = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
]
track_b = [
    "trl>=0.9",
    "transformers>=4.40",
    "torch>=2.1",
    "accelerate>=0.27",
    "peft>=0.10",
    "wandb>=0.16",
    "matplotlib>=3.7",
    "numpy>=1.26",
    "sentence-transformers>=2.5",
    "pyyaml>=6.0",
]
train = [
    "unsloth",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "pre-commit>=3.6",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "numpy>=1.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nyaya_mitra"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B"]
